--- a/src/main/webapp/css/personal.css
+++ b/src/main/webapp/css/personal.css
@@ -10,7 +10,7 @@ body{
 }
 #head{
     width:1000px;
-    height:150px;
+    height:250px;
     background-color: #CAA5D7;
 }
 #headNav{
@@ -174,4 +174,27 @@ body{
     letter-spacing: 3px;
     font-size: 20px;
     color: red;
+}
+
+.list{
+    width:1000px;
+    height:250px;
+    list-style: none;
+    padding:0px;
+    position: relative;
+}
+.item{
+    position: absolute;
+    width:100%;
+    height:100%;
+    opacity: 0;
+    transition: all .9s;
+}
+.item.active{
+    z-index:100000;
+    opacity: 1;
+}
+.carImg{
+    width:1000px;
+    height:250px;
 }
